# soft-renderer-rs

./: Cargo.toml  readme  readme.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/app/: instance.rs  mesh_loader.rs  mod.rs  renderer.rs
crates/core/src/graphics/: bitmap.rs  clip.rs  light.rs  material.rs  mesh.rs  mod.rs  scan_buffer.rs  vertex.rs
crates/core/src/math/: mod.rs
crates/core/src/math/linear_algebra/: matrix.rs  mod.rs  quaternion.rs  vector.rs
ref/: main.cpp
ref/example/: gui.rs  main.rs
src/: main.rs  world.rs
src/app/: camera.rs  gui.rs  instance.rs  mesh_loader.rs  mod.rs  renderer.rs  starfield.rs  timestep.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/app/: camera.rs  instance.rs  mod.rs
src/core/src/math/: mod.rs
src/crates/core/src/graphics/: vertex.rs
src/graphics/: bitmap.rs  clip.rs  color.rs  edge.rs  gradients.rs  mesh.rs  mod.rs  scan_buffer.rs  vertex.rs
src/math/linear_algebra/: matrix.rs  quaternion.rs  vector.rs
