[package]
name = "soft-rend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
# egui = "0.20"
# egui-wgpu = "0.20"
# egui-winit = { version = "0.20", default-features = false, features = ["links"] }
simple_logger = "4.0.0"
log = "0.4"
pixels = "0.11.0"
winit = "0.27"
winit_input_helper = "0.13"
rand = "0.8.5"
image = "0.24.5"
# rayon = "1.6.1"