[package]
name = "soft-rend"
version = "0.0.0"
edition = "2021"
description = "Software Renderer"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/iggyzuk/soft-renderer-rs"

[workspace]
members = [ "crates/*" ] # , "examples/*"

[dependencies]
core = { path = "crates/core" }
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = { version = "0.22.0", default-features = false }
simple_logger = "4.0.0"
log = "0.4"
pixels = "0.13.0"
winit = "0.28.7"
winit_input_helper = "0.14.1"
rand = "0.8.5"
image = "0.24.5"
rayon = "1.6.1"
xbr = "0.2.2"