[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# optimize = ["log/release_max_level_warn"]
# default = ["optimize"]

[dependencies]
simple_logger = "4.0.0"
log = "0.4"
winit = "0.28.7"
winit_input_helper = "0.14.1"
pixels = "0.13.0"
rand = "0.8.5"
image = "0.24.5"
rayon = "1.6.1"